--- a/src/features/components/drawer/drawer.component.scss
+++ b/src/features/components/drawer/drawer.component.scss
@@ -1,50 +1,56 @@
 @import '../../../../assets/scss/variables.scss';
 
 $drawer-width: 120px;
-$primary-dark: #000;
 $primary-icon-color: gray;
 $font-size-medium: 14px;
 $transition-rate: 0.4s;
-$primary-background-color: pink;
 $primary-selected-text-color: red;
+$drawer-bg-color: rgba(232, 212, 212, 0.58);
 
-.container, .container .drawer {
-  width: $drawer-width;
+.container {
+  > div:nth-child(2) {
+    width: $drawer-width!important;
+  }
   height: 100%;
 }
 
 .container{
-  
-  > div{
-    border: none;
-  }
 
   .drawer{    
-    background: $primary-dark;  
-    display: inline-table;
-    width: 100%;
+    width: 100%!important;
+    height: 100%;
+    background: $drawer-bg-color;
 
     > div{
-      border-right: none;    
+      border-right: none;
+      display: flex;
+      justify-content: center;
     }
   
-    li{
-      padding: 0;
-      color: $primary-icon-color;
-      font-size: $font-size-medium;
-      text-transform: uppercase;
-      height: 100px;
-      display: flex;
-      flex-direction: column;
-      transition: $transition-rate;
-      
-      img{
-        max-width: 50px;
+    a{
+      text-decoration: none!important;
+
+      li{
+        padding: 0;
+        color: $primary-icon-color;
+        font-size: $font-size-medium;
+        text-transform: uppercase;
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        transition: $transition-rate;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        img{
+          max-width: 50px;
+        }
       }
-    }
+    }    
     
     .active > li{
-      background: $primary-background-color;
+      background: $bg-secondary;
       color: $primary-selected-text-color;
     }
   }
@@ -55,13 +61,18 @@ $primary-selected-text-color: red;
   .container, .container > div:nth-child(2){
     width: 80%!important;
   }
+  .drawer{
+    width: 100%!important;
+  }
 
   li{
     flex-direction: row!important;
     height: 55px!important;
-    img{
+    justify-content: flex-start!important;
+    padding: 0 20px;
+    .icon{
       width: 50px;
-      margin-top: -10px;
+      margin: 10px;
     }
   }
 }
