--- a/src/features/components/header/header.component.scss
+++ b/src/features/components/header/header.component.scss
@@ -1,12 +1,15 @@
 @import '../../../../assets/scss/variables.scss';
 
 .header{
-    background-color: $bg-secondary!important;
-    padding: 0 20px;
-    line-height: 60px;
-    height: 60px!important;
+  background-color: $bg-secondary!important;
+  line-height: 60px;
+  height: 60px!important;
 
-    .title{
-        padding: 0 20px;
-    }
+  > div{
+      padding-left: 18px;
+      padding-right: 18px;
+  }
+  .title{
+      padding: 0 20px;
+  }
 }
