--- a/src/features/components/header/header.component.scss
+++ b/src/features/components/header/header.component.scss
@@ -2,6 +2,7 @@
 
 .header{
   background-color: $bg-secondary!important;
+  color: $text-color!important;
   line-height: 60px;
   height: 60px!important;
 
