--- a/src/features/components/header/header.component.scss
+++ b/src/features/components/header/header.component.scss
@@ -1,8 +1,8 @@
 @import '../../../../assets/scss/variables.scss';
 
 .header{
-  background-color: $bg-secondary!important;
-  color: $text-color!important;
+  background-color: $secondary-background-color!important;
+  color: $primary-text-color!important;
   line-height: 60px;
   height: 60px!important;
 
