--- a/assets/scss/resets.css
+++ b/assets/scss/resets.css
@@ -56,6 +56,7 @@ body{
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
 	line-height: 1;
+	overflow: hidden;
 }
 th, td{
 	vertical-align: middle;
