WIP: use create react app configuration

--- a/src/features/components/drawer/drawer.component.scss
+++ b/src/features/components/drawer/drawer.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/scss/variables.scss';
+@import '../../../assets/scss/variables.scss';
 
 $drawer-width: 120px;
 $primary-icon-color: gray;
