--- a/src/features/components/header/header.component.scss
+++ b/src/features/components/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/scss/variables.scss';
+@import '../../../assets/scss/variables.scss';
 
 .header{
   background-color: $secondary-background-color!important;
