--- a/src/features/pages/default-layout/default-layout.page.scss
+++ b/src/features/pages/default-layout/default-layout.page.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/scss/variables.scss';
+@import '../../../assets/scss/variables.scss';
 .wrapper{
   padding: $frame-padding;
   overflow: auto;
