--- a/src/features/pages/default-layout/default-layout.module.scss
+++ b/src/features/pages/default-layout/default-layout.module.scss
@@ -1,6 +1,8 @@
 @import '../../../assets/scss/variables.scss';
+
 .wrapper{
   padding: $frame-padding;
   overflow: auto;
   height: calc(100vh - 124px);
+  background: $secondary-background-color;
 }
